--- a/docs/style.css
+++ b/docs/style.css
@@ -9,8 +9,8 @@ section{
 }
 a{
     color: black;
-    font-weight: bolder
-    
+    font-weight: bolder;
+    text-decoration: underline;
 }
 .logos{
     width: 150px;
