--- a/docs/style.css
+++ b/docs/style.css
@@ -16,6 +16,9 @@ a{
     width: 150px;
     height: auto;
 }
+.miniaturas{
+    transform: translateY(4px);
+}
 #sobre{
     /*background-color: blue;*/
     padding: 10px;
