--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,7 @@ header{
     margin: auto;
 }
 section{
-    box-shadow: 15px 15px 2px black;
+    box-shadow: 15px 15px 2px #50bd68;    
     border-radius: 20px;
     margin: auto;
     margin-bottom: 50px;
