--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -18,6 +18,7 @@ html{
 }
 header{
     width: 100%;
+    height: 140px;
     position: fixed;
     top: 0;
     left: 0;
@@ -25,26 +26,38 @@ header{
     padding: 10px;
     justify-content: space-between;
     transition: 0.6s;
-    z-index: 100000;
-    
+    z-index: 100000;   
+}
+header.sticky{
+    background-color: #025059a2;
+    height: 75px;
 }
 header nav{
-    margin: auto 10px auto auto;
+    margin: auto 10% auto auto;
+    transition: 0.6s;
 }
 header a{
     /* margin-top: 8%; */
     color: white;
     text-decoration: none;
-    padding: 0px 15px;
+    padding: 10px 15px;
     font-weight: bold;
-    font-size: 1.1em; 
+    font-size: 1em; 
     text-transform: uppercase;
     letter-spacing: 2px;
+    transition: 0.6s;
+}
+header.sticky a{
+    font-size: 0.9em;
+    padding: 5px 15px;
 }
 .nav_bar_image{
     margin-left: 5%;
     width: 80px;
     height: 80px;
+}
+header.sticky img{
+    display: none;
 }
 .nav_bar_image img{
     width: 100%;
