--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -64,13 +64,13 @@ header.sticky img{
     height: 100%;
 }
 section#home{
-    position: relative;
     background: url(../img/large-triangles.svg) center fixed;
     height: 80vh;
     width: 100%;
-    
 }
-#home_content{
+home_content{
+    position: fixed;
+    top: 50px;
     width: 90%;
     height: 50px;
     background-color: white;
