--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -24,16 +24,11 @@ header{
     left: 0;
     display: flex;
     padding: 10px;
-    justify-content: space-between;
     transition: 0.6s;
     z-index: 100000;   
 }
-header.sticky{
-    background-color: #025059a2;
-    height: 75px;
-}
 header nav{
-    margin: auto 10% auto auto;
+    margin: auto;
     transition: 0.6s;
 }
 header a{
@@ -47,33 +42,33 @@ header a{
     letter-spacing: 2px;
     transition: 0.6s;
 }
-header.sticky a{
-    font-size: 0.9em;
-    padding: 5px 15px;
-}
-.nav_bar_image{
-    margin-left: 5%;
-    width: 80px;
-    height: 80px;
-}
-header.sticky img{
-    display: none;
-}
-.nav_bar_image img{
-    width: 100%;
-    height: 100%;
-}
 section#home{
     background: url(../img/large-triangles.svg) center fixed;
     height: 80vh;
     width: 100%;
 }
-home_content{
-    position: fixed;
-    top: 50px;
-    width: 90%;
-    height: 50px;
-    background-color: white;
+#home_content{
+    background: url(../img/Background_1.png) no-repeat center;
+    width: auto;
+    height: 100%;
+    margin: auto ;
+    
+}
+#home_content button{
+    display: block;
+    margin: auto;
+    background-color: transparent;
+    color: white;
+    font-size: 25px;
+    padding: 15px 10px;
+    /* text-transform: uppercase; */
+    border: solid 5px var(--color3);
+    border-radius: 35px;
+    transition: 0.6s;
+    transform: translateY(290px)
+}
+#home_content button:hover{
+    background-color: var(--color3);
 }
 #sobre{
     background-color: var(--color3);
