--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,7 +6,8 @@
 --color3: #05F2F2; 
 --color4: #04BFBF; 
 --color5: #05F2DB; 
-
+--color6: #FF8C64;
+--sobrebgc: white;
 }
 *{
     font-family: 'Ubuntu', sans-serif;
@@ -42,6 +43,11 @@ header a{
     letter-spacing: 2px;
     transition: 0.6s;
 }
+header a:hover{
+    font-size: 1.3em;
+    text-decoration: underline;
+    text-shadow: 0px 0px 10px white;
+}
 section#home{
     background: url(../img/large-triangles.svg) center fixed;
     height: 80vh;
@@ -71,8 +77,71 @@ section#home{
     background-color: var(--color3);
 }
 #sobre{
+    background-color: var(--sobrebgc);
+    height: 100vh;   
+}
+#sobre h1{
+    background-color: var(--sobrebgc);
+    padding: 30px 0px 0px 0px ;
+    text-align: center;
+    font-size: 2.5em;
+}
+#sobre h1 {
+overflow: hidden;
+text-align: center;
+}
+#sobre h1:before, h1:after {
+background-color: #000;
+content: "";
+display: inline-block;
+height: 3px;
+position: relative;
+vertical-align: middle;
+width: 50%;
+}
+#sobre h1:before {
+right: 0.5em;
+margin-left: -50%;
+}
+#sobre h1:after {
+left: 0.5em;
+margin-right: -50%;
+}
+#sobre_container{
+    padding: 5px;
+    margin: 70px 50px auto 50px;
+    display: flex;
+}
+#sobre_content{
+    font-size: 1.1em;
+    line-height: 25px;
+    margin: 0px auto;
+    margin-left: 0%;
+    width: 50%;
+    text-align: justify;
+}
+#sobre_content h2{
+    margin-bottom: 10px;
+}
+#sobre_content a{
+    border-radius: 15px;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 5px;
+    color: white;
     background-color: var(--color3);
-    height: 100vh;
+}
+#sobre_content p{
+    margin-bottom: 10px;
+}
+#sobre_fotos{  
+    margin: auto;
+
+    width: 30%;
+    height: 100%;
+}
+#sobre_fotos img{
+    width: 100%;
 }
 /* display: flex;
     background: url("images/perfil.svg") no-repeat center;
