--- a/docs/style.css
+++ b/docs/style.css
@@ -1,25 +1,20 @@
-@charset "UTF-8";
-:root{
-    --verde: rgb(100, 237, 130)
-}
 body{
     font: normal 20px arial;
-    background-color: var(--verde);
+    background-color:  rgb(100, 237, 130);
 }
 header{
-    text-align: center;
     color: white;
-    min-width: 480px;
-    max-width: 1200px;
+    text-align: center;
+    margin: auto;
 }
 section{
-    box-shadow: 15px 15px 5px #50bd68;    
+    box-shadow: 15px 15px 2px #50bd68;    
     border-radius: 20px;
-    margin: 10px auto 30px auto;
+    margin: auto;
+    margin-bottom: 50px;
     background-color: white;
     padding: 15px;
-    min-width: 480px;
-    max-width: 1200px;
+    width: 1100px;
     align-items: center; 
 }
 a{
@@ -53,10 +48,4 @@ strong#email_contato{
 }
 li{
     padding-bottom: 10px;
-}
-#projetos a{
-    text-decoration: none;
-}
-#projetos a::after{
-    content: ': ';
 }
