--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 :root{
 --color1: #025159; 
 --color2: #012326; 
@@ -77,33 +78,31 @@ section#home{
 }
 #sobre{
     background-color: white;
-    height: 95vh;   
+    min-height: 95vh;   
 }
 #sobre h1{
     padding: 30px 0px 0px 0px ;
     text-align: center;
     font-size: 2.5em;
-}
-#sobre h1 {
-overflow: hidden;
-text-align: center;
+    overflow: hidden;
+    text-align: center;
 }
 #sobre h1:before, #sobre h1:after {
-background-color: #000;
-content: "";
-display: inline-block;
-height: 3px;
-position: relative;
-vertical-align: middle;
-width: 50%;
+    background-color: #000;
+    content: "";
+    display: inline-block;
+    height: 3px;
+    position: relative;
+    vertical-align: middle;
+    width: 50%;
 }
 #sobre h1:before {
-right: 0.5em;
-margin-left: -50%;
+    right: 0.5em;
+    margin-left: -50%;
 }
 #sobre h1:after {
-left: 0.5em;
-margin-right: -50%;
+    left: 0.5em;
+    margin-right: -50%;
 }
 #sobre_container{
     padding: 5px;
@@ -142,6 +141,32 @@ margin-right: -50%;
     width: 100%;
 }
 #skills{
-    height: 90vh;
+    height: 150vh;
     background:url(../img/Background_2.svg) center fixed;
+}
+#skills h1{
+    font-size: 2.5em;
+    padding: 40px;
+    text-align: center;
+}
+#skills_habilidades{
+    padding: 30px;
+    margin: auto;
+    background: white;
+    max-width: 80%;
+    height: 500px;
+    border-radius: 30px;
+}
+.habilidades{
+    display: block;
+    margin: 0px auto 20px auto;
+    width: 45%;
+    
+}
+.habilidades span{
+    display: block;
+    
+}
+.habilidades meter{
+    width: 100%;
 }
