--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 :root{
 --color1: #025159; 
 --color2: #012326; 
@@ -13,6 +13,7 @@
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 html{
     scroll-behavior: smooth;
@@ -33,7 +34,6 @@ header nav{
     transition: 0.6s;
 }
 header a{
-    /* margin-top: 8%; */
     color: white;
     text-decoration: none;
     padding: 10px 15px;
@@ -48,7 +48,6 @@ header a:hover{
     text-decoration: underline;
     text-shadow: 0px 0px 10px white;
 }
-
 section#home{
     background: url(../img/Background_2.svg) center fixed;
     height: 80vh;
@@ -59,30 +58,40 @@ section#home{
     width: auto;
     height: 100%;
     margin: auto ;
-    
 }
-#home_content button{
+#home_content h2{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    text-shadow: 2px 2px 2px black;
+    margin: auto;
+    color: white;
+    font-size: 6em;
+    padding: 15px 10px;
+    transition: 0.6s;
+    transform: translateY(220px);
+}
+/* #home_content button{
     display: block;
     margin: auto;
-    background-color: transparent;
+    background: #17bbfc;
     color: white;
     font-size: 25px;
     padding: 15px 10px;
-    /* text-transform: uppercase; */
-    border: solid 5px var(--color3);
+    border: solid 4px var(--color3);
     border-radius: 35px;
     transition: 0.6s;
-    transform: translateY(290px)
-}
+    transform: translateY(290px);
+} */
 #home_content button:hover{
-    background-color: var(--color3);
+    background: var(--color3);
+    
 }
 #sobre{
     background-color: white;
     min-height: 95vh;   
 }
 #sobre h1{
-    padding: 30px 0px 0px 0px ;
+    padding: 70px 0px 0px 0px ;
     text-align: center;
     font-size: 2.5em;
     overflow: hidden;
@@ -142,19 +151,20 @@ section#home{
     width: 100%;
 }
 #skills{
-    height: 150vh;
+    height: auto;
     background-color: #111;
+    
 }
 #skills h1{
     font-size: 2.5em;
-    padding: 40px;
+    padding: 70px 0px 0px;
     text-align: center;
     color: white;
 }
 #skills_habilidades{
     padding: 30px;
     margin: auto;
-    height: 500px;
+    height: auto;
     text-align: center;
 }
 .habilidades{
@@ -164,7 +174,13 @@ section#home{
    width: 220px;
    height: 350px;
    display: inline-block; 
-   
+   transition: 0.6s;
+}
+.habilidades:hover{
+    background-color: #0f2729;
+    width: 225px;
+    height: 360px;
+    border: solid 2px #00ffff; 
 }
 .habilidades .logos{
     width: 80%;
@@ -174,15 +190,48 @@ section#home{
 .habilidades #certificados{
     width: 20%;
     margin-top: 10%;
-    display: none;
+    opacity: 0;
 }
 .concluido #certificados{
     display: inline-block;
+    opacity: 1;
+}
+.concluido #certificados:hover{
+    cursor: pointer;
 }
 .habilidades p{
     text-transform: uppercase;
     color: white;
     font-weight: bolder;
     font-size: 1.5em;
-
+}
+#contato{
+    height: 100vh;
+    background-color: #222;
+    display: none;
+}
+#contato h1{
+    font-size: 2.5em;
+    padding: 70px;
+    text-align: center;
+}
+#contato_content{
+    border-radius: 50px;
+    background-color: white;
+    padding: 70px;
+    margin: auto;
+    width: 80%;
+    font-size: 1.2em;
+}
+.miniaturas{
+    transform: translateY(4px);
+}
+footer{
+    background-color: rgb(26, 26, 26);
+    text-align: center;
+    color: white;
+}
+footer p{
+    padding: 5px;
+    font-weight: bold;
 }
