--- a/docs/css/animation.css
+++ b/docs/css/animation.css
@@ -1,10 +1,20 @@
 header.anime{
     background-color: #025059a2;
-    height: 50px;
+    height: 13vh;
 }
 header.anime a {
-    font-size: 1em;
+    font-size: 2.2vh;
 }
 header.anime img{
     display: none;
+}
+#sobre_container.pequeno{
+    display: block;
+}
+#sobre_container.pequeno #sobre_fotos{
+    width: 70%;
+    margin-bottom: 30px;
+}
+#sobre_container.pequeno #sobre_content{
+    max-width: 90%;
 }
