--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -32,20 +32,23 @@ header{
 header nav{
     margin: auto;
     transition: 0.6s;
+    width: 100%;
+    text-align: center;
 }
 header a{
-    
+    display: inline-block;
+    width: auto;
     color: white;
     text-decoration: none;
     padding: 10px 15px;
     font-weight: bold;
-    font-size: 1.3em; 
+    font-size: 3vh; 
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: 0.6s;
 }
 header a:hover{
-    font-size: 1.5em;
+    font-size: 3.5vh;
     text-decoration: underline;
     text-shadow: 0px 0px 10px white;
 }
@@ -82,7 +85,7 @@ section#home{
 #sobre h1{
     padding: 70px 0px 0px 0px ;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 7vh;
     overflow: hidden;
     text-align: center;
 }
@@ -106,13 +109,13 @@ section#home{
 #sobre_container{
     padding: 5px;
     margin: 70px 50px auto 50px;
-    display: flex;
+    display: flex; 
 }
 #sobre_content{
+    
     font-size: 1.1em;
     line-height: 30px;
     margin: 0px auto;
-    margin-left: 0%;
     max-width: 50%;
     text-align: justify;
 }
