--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -40,15 +40,15 @@ header a{
     width: auto;
     color: white;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 10px 2vw;
     font-weight: bold;
-    font-size: 3vh; 
+    font-size: 1.8vw; 
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: 0.6s;
 }
 header a:hover{
-    font-size: 3.5vh;
+    transform: scale(1.2);
     text-decoration: underline;
     text-shadow: 0px 0px 10px white;
 }
@@ -59,7 +59,7 @@ section#home{
 }
 #home_content{
     background: url(../img/Background_1.png) no-repeat center;
-    width: auto;
+    width: 100%;
     height: 100%;
     margin: auto ;
 }
@@ -69,10 +69,9 @@ section#home{
     text-shadow: 2px 2px 2px black;
     margin: auto;
     color: white;
-    font-size: 6em;
+    font-size: 10vw;
     padding: 15px 10px;
-    transition: 0.6s;
-    transform: translateY(220px);
+    transform: translateY(30vh);
 }
 #home_content button:hover{
     background: var(--color3);
@@ -112,8 +111,8 @@ section#home{
     display: flex; 
 }
 #sobre_content{
-    font-size: 1.1em;
-    line-height: 30px;
+    font-size: 3vh;
+    line-height: 7vh;
     margin: 0px auto;
     max-width: 50%;
     text-align: justify;
