--- a/docs/css/animation.css
+++ b/docs/css/animation.css
@@ -3,11 +3,10 @@ header.anime{
     height: 13vh;
 }
 header.anime a {
-    font-size: 2.2vh;
+    font-size: 1.8vh;
 }
-header.pequeno a{
-    padding: 10px 1vw;
-    font-size: 3vw;
+header.anime img{
+    display: none;
 }
 #sobre_container.pequeno{
     display: block;
@@ -20,4 +19,3 @@ header.pequeno a{
     max-width: 100%;
     font-size: 0.9em;
 }
-
